Обновлен .dockerignore для исключения файлов docs/*.py; изменены ссылки на оригинальные скрипты в документации CLAUDE.md; обновлен Dockerfile для копирования только необходимых файлов в директорию docs.

--- a/.dockerignore
+++ b/.dockerignore
@@ -61,8 +61,9 @@ coverage.xml
 README*
 CHANGELOG*
 
-# Jupyter notebooks (not needed in production)
+# Exclude docs code files (not needed in production)
 docs/*.ipynb
+docs/*.py
 
 # Logs
 *.log
